--- a/back_end/conn.env
+++ b/back_end/conn.env
@@ -1,3 +1,3 @@
 PORT=5555
-MONGO_URI=mongodb+srv://varun:BeefBan232@bookstore.puhjuc4.mongodb.net/books-collection?retryWrites=true&w=majority&appName=BookStore;
+MONGO_URL=mongodb+srv://varun:BeefBan232@bookstore.puhjuc4.mongodb.net/books-collection?retryWrites=true&w=majority&appName=BookStore;
 
