--- a/front-end/db.env
+++ b/front-end/db.env
@@ -1,1 +1,1 @@
-MONGO_URI=mongodb+srv://varun:BeefBan232@bookstore.puhjuc4.mongodb.net/books-collection?retryWrites=true&w=majority&appName=BookStore;
+MONGO_URL=mongodb+srv://varun:BeefBan232@bookstore.puhjuc4.mongodb.net/books-collection?retryWrites=true&w=majority&appName=BookStore;
